# LusCara

./: .gitignore  LICENSE  README.md
LuscaUtils/: PTQ.py  README.md  benchmark_lfw.py  evaluate_10fold.py  find_lfw_thresholds.py  requirements.txt
cpp/: CMakeLists.txt  README.md  makefile
cpp/include/: FacenetEngine.hpp  ImageProcessor.hpp  MathUtils.hpp
cpp/src/: FacenetEngine.cpp  ImageProcessor.cpp  MathUtils.cpp  main.cpp
cpp/tools/: benchmark_lfw.cpp
